<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_project"
            android:icon="@mipmap/ic_project"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_directory"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_directory" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_foreground"
            android:title="@string/menu_about" />
    </group>
</menu>