<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_project">

    <fragment
        android:id="@+id/nav_project"
        android:name="com.example.fisherhanbook.ui.home.HomeFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="com.example.fisherhanbook.ui.gallery.GalleryFragment"
        android:label="@string/menu_resources"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_directory"
        android:name="com.example.fisherhanbook.ui.gallery.GalleryFragment"
        android:label="@string/menu_directory"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.fisherhanbook.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>